manifests/grafana.yaml
# TODO:
# - add docker.io/grafana/grafana_renderer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: docker.io/grafana/grafana:8.0.3
          ports:
            - name: web
              containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-postgres-deployment
  labels:
    app: grafana-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-postgres
  template:
    metadata:
      labels:
        app: grafana-postgres
    spec:
      containers:
        - name: grafana-postgres
          image: docker.io/postgres:13
          ports:
            - name: postgres
              containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  selector:
    app: grafana
  ports:
    - name: web
      port: 80
      targetPort: web
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-postgres-service
spec:
  selector:
    app: grafana-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
    - host: 'grafana.localhost'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: grafana-service
                port:
                  name: web
